@@ -1,3 +1,7 @@
+== Mon Nov  9 23:38:33 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
+
+* Added ability to create new email via a hash or hash-like object. <mikel>
+
 == Fri Nov  6 22:52:10 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
 * a6ef2b4: Fixed Issue #4 - Can't call encoding on non existant 
